@@ -1,3 +1,7 @@
+2004-12-09  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c: using of the XklGetMaxNumGroups
+
 2004-11-29  Sergey V. Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkb.c: preview only makes sense for XKB backend
